# UNISINOS-graphics-processing-2-GB-scene

./: .gitignore  CMakeLists.txt  README.md
assets/allay/: license.txt  scene.gltf
assets/happpy_ghast/: license.txt  material.mtl  scene.gltf
assets/village_map/source/: 2223311.mtl
shaders/: phong.frag  phong.vert  skybox.frag  skybox.vert
src/: camera.cpp  camera.h  catmull_rom.cpp  catmull_rom.h  config.cpp  config.h  config.json  main.cpp  obj_loader.cpp  obj_loader.h  paths.h.in  shader.cpp  shader.h
